# ChangeLog for dev-util/shellcheck
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/shellcheck/ChangeLog,v 1.2 2015/02/06 15:10:39 jlec Exp $

*shellcheck-0.3.5-r1 (06 Feb 2015)

  06 Feb 2015; Justin Lecher <jlec@gentoo.org> -shellcheck-0.3.5.ebuild,
  +shellcheck-0.3.5-r1.ebuild:
  Import changes from haskell overlay

*shellcheck-0.3.5 (06 Feb 2015)

  06 Feb 2015; Justin Lecher <jlec@gentoo.org> +shellcheck-0.3.5.ebuild,
  +metadata.xml:
  New addition
