@@ -2,26 +2,28 @@
 Hash: SHA512
 
 DIST ShellCheck-0.3.5.tar.gz 77173 SHA256 9289fda0b3683f4e7c2c003f875a9e308897368fe956ed924a76cafc2fdc9974 SHA512 b140d5907cec743fb31809fcf4e01481e2a6c6bf97394e521a191427d30358a995565d2fb9d99ed5b943ca33654cfe7014b042a41bf2da4fd20ea0227d6af06c WHIRLPOOL 6ee0c38a741b65d957f7ed422f879ddd3563dbf602d2477e301b4fb0404473b6082b7f4aba97e320c6f994063f6ccb789389a58116deb75519cccdc0935d73e1
+DIST ShellCheck-0.3.6.tar.gz 82760 SHA256 f19f950b39eba78334cfd044077ce3686fb6defe2c6e593c0def949aa089230c SHA512 53e36770eabb49f2e0e84a508b69805799451ecc3bc6b2013e68b5f701d021d552706dcc027089c92355e833059ce856ae193f320f9dad0d3c60c4c5d9516219 WHIRLPOOL 5e8e50c6fd2a0036c24994029ad2e3f5d08afee888606c5205b10bc93c6882308dbe14c3b050c3edeab6e6554f8f20d312b147f9a52575f0491a36e0e7a7411b
 DIST shellcheck-man-0.3.5.tar.xz 1876 SHA256 5b3f940fd8760676c40787b25b7c950a5ae7fa25e882dea6b11dfeabb1b712ee SHA512 974b7bae0a927151819a14eef2be40d76c2eb50fadfd966bef79908b7faab958ecd42a1584cbe1fb25e2e59f1593d89b8632684d655490c83e246502d9680d26 WHIRLPOOL 622968777ce5387abe6e5f068bff5eb9879d8a990d7680fe2acba1ee89114ec5aca3cf402e579222af2941b0d99b1df95415ad17e9ef973a7b7e74fcd6acbee5
 EBUILD shellcheck-0.3.5-r1.ebuild 1124 SHA256 9eee735317c2432d78cc3e8b7b4831e334794d21324edffe8e99647d3ca1aea9 SHA512 2cec123829fb682c42787ce2dbd51b666d8caae243cf28652518abae4c3ea4a9355af8c9c3f7384a97e359b2447f97e5ef5f01995ad2f0bdb123f3bc17ea4bf2 WHIRLPOOL 0f87efc9d4dccd7a8b66d11cd7c09558978be5bbfac5a5800e0c01a204c10209b124984a6a773333d98758eae09ee02428a55bdd5693ccd9f7916e2f30a9122a
-MISC ChangeLog 527 SHA256 bec76401aa957f0e215b9c6d80add02c316740781553a3404115327ca6bcc4dd SHA512 605966ae0446dbe5d9400b84b6f7a503c3962eeb36ba161ac99cf40e31018c753f65a3aeefcd19b504163e89c9fc3d5bfcb86056b40b35e178c3443e4c1dbc8f WHIRLPOOL a386d96cefd95effa6e0aa936403842c7c8b477ac9d4e24275f0141955609c14df270f323ca22a4fba0eb46e0d84947244dbcd7f178549f42c25ff505185b310
+EBUILD shellcheck-0.3.6.ebuild 1123 SHA256 89c78b87e473faa497bf674a4da132b652254562012d00404e05a80043a14829 SHA512 55938d3a316bc1f497a649504ff3efe7444fec1c58a4d548156012f5f05e7c16c57bb63bc69ed2847cd62bda7574437e91d6f1f00cd4afb63cba26aa23e6876d WHIRLPOOL 745f9f94c447cc83e0aee5e30e1e023f717188db270dcda133ffba622a2b494d89bc016eb88aeba9ec2fcf7d635f83e56fae1990c4f5e50bfff61e3a5ae642be
+MISC ChangeLog 648 SHA256 e5a6db2960e030a91f720c364f773d73074dba033ee54d859fcc960832e9e65b SHA512 b583976ab48408f36c1f8d75917938acc2a8601e1559f937332fff342ee8554b766554960e88f509ca64bc3d4e2ed9c37761af49b4290020141751f2877ea890 WHIRLPOOL bab4b5c33cbbc29d075259eda6b41d490341b5eb00f039b0c7ca902a2dda68c2fe564b0e85256a39269b735bfa18a7fbb73be8d74a3900cae7c8b8c82bc0eb54
 MISC metadata.xml 236 SHA256 feedd499ae6ddebc364ebb0f38d08bfbcc6b5d499f805a307a9367fb82dd12e8 SHA512 02882c2ecdf4fe400bf3e4455df1feae173e12b6fbb09181ea50541bb9dbf43780a0ab00fa799ccf5b7f2c27dcf9d854e16146cfb336ff3270a7b4369e451860 WHIRLPOOL b6580a9428931142ea961e985e6b5c736ab716eefb85706692c780c11f97d6019be488493c2e2a51b7ae8b480be80276edddb2858fe19684d48df64433475e06
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCgBmBQJU1NlwXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCgBmBQJVIpw+XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQyQ0JDQjFGMzBDQ0UxMjFGNENDNDgxMDdC
-OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FViry9AP/iL/nUoVJMv+wR5QdsyBLiK+
-6IiX005gOYXamL0Bocj1nVcI4XlzU0MwSC8q0+HQO6aXHiD4FWX7Skiseq2fNZh0
-UrFJvmfPnOod9tbnnrkaASrf83DEhR/QnOJbVhKXno2rxPuSuW6r9qchPcgVZg9a
-AQBNVRnkFjcyhUJfSIT4jAHsImT5igMvpRXUjl4KaOsiA1fUeatlX1KlWZrkB27E
-DwwRZMCMHt5xJ0841+wmeyI941XvyU/o0W4sHzwmBnEudBpn99flW8FjXsDcueHO
-3Y/LiT7ktuvF3HSY63gsGr3jGWgLwGfao2gyIZSD6BU72npOpI4Qr66ECu0DJ/gO
-CeuL6gVtbHtoUTSkBrtFyu8YPIWAx0d1Yuhsn6pijKyKA7Nqt+1pTO9IpZ5NuRze
-dNf3zMwskI08+E2iVcaBtMTSZRjAE0FXohRMhhwI2efbW48hMExltltyJwXRfu4L
-x9qf2WICcRKP+wx5ElPMYlAyOJoyGbDUJp/1vlO7pwXRFNtleu07XQOsQapHUHio
-F/AHmFLUhyXsVg1YrVgvoRFyG2SIQ0eDSFUA8wghh3ILsrlfRjXhE5APD0BqVT8y
-bMiH9WH8X3O7Y3mMI9E21MswrGHxG1/zKUsd4aVyZEY6pO1PcwfcXXhS92RdqW3L
-yijd0S1DSZC4hxe8kUCS
-=l4qA
+OUQ0RjIzMUJEMTU1OEFCAAoJELnU8jG9FVirZ8cP/1xhvAV5+O4FgLl8ipfsS1a7
+Ez9k3K/XjmVW/lk6wALbxLqDsdb7Q64xoRyESv5TN7iMozljkaYLy8CnyOGUfh8s
+xJt0KbFPTM/XOAdsaqt4MVAwlvC96ubHluwWbzpuDt47Yig2Fs5Z1/pFqjE1jNao
+i9WqUpfrVm0e8hICtRla7vJLdtJJxMcAhObywAPNLiEjTnp9Gndj1E+fRgqP8htv
+Sf9foFq+xuyFLtHqg4DrQHgDPCUWZR8XiT9FFK/1Si/NUxwHiacN8dvun/D0lrby
+BS0jO4F9Bsw01iao6e4dISDQx8QJDjEpdtJ8uaAG8F3NFCQNFZWgK0g8WRiw/6l2
+7G0edAcQgTIHi1+thEQZtZmZPq/kJvMCxee5geDkmE6unUaFAut+SBuiuLbH+62F
+BYCymDha5DmRDLG2EFoW9ARn5ocgKbBkyT5XrHzmrP/ZufVEaYsJolJKARgVeMIF
+lULYclqoBTD/eqKGq7CAu1P2zsCU9hRnlAnY1P0ZIuz4fRt9Y3elRVedXAvTbEPi
+ZVCTVFSyIXya09HlqQjPs5GkZ0ZX1FEeVLU+e66vRGi5M5Pg87x9V5zTJ9mrSTHx
+PfftFGVQnLL9XKlMPVQTx3bRvv+vnByhx9ZE9j5dCngMmaqX6oMNIeMF7GvV8nf6
+XM8GiQj/IbIw0tOPM3TH
+=W2hY
 -----END PGP SIGNATURE-----
