@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install postinst postrm setup test
+DEPEND=dev-haskell/json:=[profile?] dev-haskell/mtl:=[profile?] dev-haskell/parsec:=[profile?] >=dev-haskell/quickcheck-2.7.4:2=[profile?] dev-haskell/regex-compat:=[profile?] dev-haskell/transformers:=[profile?] >=dev-lang/ghc-7.4.1:= >=dev-haskell/cabal-1.8 doc? ( dev-haskell/haddock ) hscolour? ( dev-haskell/hscolour ) >=dev-haskell/cabal-1.1.4
+DESCRIPTION=Shell script analysis tool
+EAPI=5
+HOMEPAGE=http://www.shellcheck.net/
+IUSE=doc hscolour profile test
+KEYWORDS=~amd64 ~x86
+LICENSE=AGPL-3
+RDEPEND=dev-haskell/json:=[profile?] dev-haskell/mtl:=[profile?] dev-haskell/parsec:=[profile?] >=dev-haskell/quickcheck-2.7.4:2=[profile?] dev-haskell/regex-compat:=[profile?] dev-haskell/transformers:=[profile?] >=dev-lang/ghc-7.4.1:=
+SLOT=0/0.3.6
+SRC_URI=mirror://hackage/packages/archive/ShellCheck/0.3.6/ShellCheck-0.3.6.tar.gz
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	ghc-package	48ae4e0fd75e1c8047c4b7f507d5debc	haskell-cabal	eee03ecca8dca7a927272dcea2ca53f4	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	toolchain-funcs	79b635d29abf0572d6a1b0dc8e63c0e4	versionator	cd0bcdb170807e4a1984115e9d53a26f
+_md5_=8140cfafdbe3a20b77343db2f0ee2552
